# sorting-algorithms

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
sorting/: __init__.py  bubble_sort.py  heap_sort.py  merge_sort.py  quick_sort.py
tests/: test_bubble_sort.py  test_heap_sort.py  test_merge_sort.py  test_quick_sort.py
